# llh_converter

./: .gitmodules  CMakeLists.txt  README.md  package.xml  setup.py
.github/workflows/: build.yml
cmake/: FindGeographicLib.cmake
include/llh_converter/: gsigeo.hpp  gsigeo2024.hpp  height_converter.hpp  jpgeo2024.hpp  llh_converter.hpp  meridian_convergence_angle_correction.hpp
python/: CMakeLists.txt
python/include/llh_converter_python/: llh_converter_python.h
python/src/llh_converter_python/: llh_converter_python.cpp
python/test/: mgrs2plane.py
src/: gsigeo.cpp  gsigeo2024.cpp  height_converter.cpp  jpgeo2024.cpp  llh_converter.cpp  meridian_convergence_angle_correction.cpp
test/: gsigeo2024_test.cpp  gsigeo_test.cpp  height_converter_test.cpp  height_offset_test.cpp  jpgeo2024_test.cpp  meridian_convergence_angle_correction_test.cpp
